<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:id="@+id/logotop"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_margin="30dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            android:layout_width="match_parent"
            android:layout_height="100dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Member Login"
            android:gravity="center"
            android:paddingTop="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <com.google.android.material.textfield.TextInputLayout
            android:textColorHint="@color/cryptodark"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatEditText
                android:textColor="@color/cryptodark"
                android:textColorHint="@color/cryptodark"
                android:id="@+id/username"
                android:inputType="number"
                android:maxLines="1"
                android:hint="@string/username"
                android:singleLine="true"
                android:background="@drawable/round_cornor_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:textColorHint="@color/cryptodark"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleTint="@color/colorAccent"
            app:passwordToggleEnabled="true">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/password"
                android:singleLine="true"
                android:background="@drawable/round_cornor_white"
                android:inputType="textPassword"
                android:textColor="@color/cryptodark"
                android:textColorHint="@color/cryptodark"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>



    </LinearLayout>


    <Button
        android:layout_margin="10dp"
        android:id="@+id/loginbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/login"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <com.oktomine.mining.font.RobotoTextView
            android:id="@+id/forgotpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/forgot_password"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/white" />

        <com.oktomine.mining.font.RobotoTextView
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/new_to_oktomine_create_new_account"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/white"
            />
    </LinearLayout>




</LinearLayout>
