<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/ref_bg"
        app:layout_constraintBottom_toTopOf="@id/refs_guide_8"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black_50"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/refs_back"
            android:layout_width="43dp"
            android:layout_height="28dp"
            android:layout_centerVertical="true"
            android:paddingStart="15dp"
            android:paddingEnd="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_arrow"
            app:tint="@color/white_aa" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/referral_system"
            android:textColor="@color/white_aa"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/refs_guide_1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/ref_n_earn"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/refs_guide_1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/refs_guide_2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.21" />

    <ImageView
        android:id="@+id/refs_guide_3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:src="@drawable/reward_active"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/refs_guide_2" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rc_coin_bg_semitrans"
        android:gravity="center_vertical"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/refs_guide_3">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:adjustViewBounds="true"
            android:src="@drawable/icon_coin" />

        <TextView
            android:id="@+id/refs_referrer_amtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/extra_bold"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/refs_guide_4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.42" />

    <TextView
        android:id="@+id/refs_descView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/refs_guide_4"
        app:layout_constraintWidth_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/refs_guide_5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <LinearLayout
        android:id="@+id/refs_guide_5_1"
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:background="@drawable/ref_code_bg"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/refs_guide_5">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_ref_code"
                android:textColor="@color/white_aa"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/refs_codeView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/extra_bold"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@color/white_aa" />

        <LinearLayout
            android:id="@+id/refs_copyBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.29"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:text="@string/copy"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:text="@string/code"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toTopOf="@id/refs_guide_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/refs_guide_5_1">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/white_60" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="1dp"
            android:text="@string/or"
            android:textColor="@color/white_dim"
            android:textSize="15sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/white_60" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/refs_guide_6"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66" />

    <TextView
        android:id="@+id/refs_refUrl_inputView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/rc_semi_black_btn"
        android:ellipsize="end"
        android:fontFamily="@font/extra_bold"
        android:gravity="center"
        android:lines="1"
        android:text="@string/please_wait"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/refs_guide_6"
        app:layout_constraintWidth_percent="0.8" />

    <ImageView
        android:id="@+id/refs_copyLink_btn"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_copy"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/refs_refUrl_inputView"
        app:layout_constraintEnd_toEndOf="@id/refs_refUrl_inputView"
        app:layout_constraintTop_toTopOf="@id/refs_refUrl_inputView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/refs_guide_7"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/extra_bold"
        android:text="@string/share_ref_via"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/refs_guide_7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/refs_guide_8"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.83" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="52dp"
        app:layout_constraintBottom_toTopOf="@id/refs_guide_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/refs_guide_8"
        app:layout_constraintWidth_percent="0.9">

        <androidx.cardview.widget.CardView
            android:id="@+id/refs_go_telegram"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#14a4dd"
            app:cardCornerRadius="21dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="false"
                android:focusable="false"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/icon_telegram" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/telegram"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/refs_go_facebook"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#0872f7"
            app:cardCornerRadius="21dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="false"
                android:focusable="false"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/fb" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/facebook"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/refs_go_whatsapp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#1fa900"
            app:cardCornerRadius="21dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="false"
                android:focusable="false"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/icon_whatsapp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/whatsapp"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/refs_guide_9"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <Button
        android:id="@+id/refs_go_history"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:background="@drawable/rc_btn_green"
        android:text="@string/ref_history"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/refs_guide_9" />
</androidx.constraintlayout.widget.ConstraintLayout>